fixing layout broken in chrome

--- a/symblog/web/css/screen.css
+++ b/symblog/web/css/screen.css
@@ -29,7 +29,7 @@ a:active {
 
 .main-col { width: 770px; display: inline-block; float: right; padding: 0px; margin-top: 10px; margin-bottom: 20px; }
 
-.sidebar { width: 210px; padding: 0px; display: inline-block; color: #4C1A00; margin-top: -6px;}
+.sidebar { float:left; width: 210px; padding: 0px; display: inline-block; color: #4C1A00; margin-top: -6px;}
 .sidebar ul { list-style: none; text-align: left; color: #AD5C33; text-indent: -2em; line-height: 25px; }
 
 .main-col h1 { line-height: 1.2em; font-size: 28px; margin-bottom: 10px; margin-top: 0px; font-weight: 600; color: #DB5D1F;}
